--- a/index.html
+++ b/index.html
@@ -63,23 +63,21 @@
                         <form>
                             <div class="form-group">
                                 <label for="train-name-input">Train Name</label>
-                                <input class="form-control" id="trainNameInput"
-                                    placeholder="Train Name (e.g., Reading Railroad)" type="text">
+                                <input class="form-control" id="trainNameInput" type="text" required>
                             </div>
                             <div class="form-group">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="destinationInput" placeholder="Broadway Blvd."
-                                    type="text">
+                                <input class="form-control" id="destinationInput" type="text" required>
                             </div>
                             <div class="form-group">
                                 <label for="time-input">First Train Time (HH:mm : military time)</label>
-                                <input class="form-control" id="trainTime" placeholder="16:00" type="text">
+                                <input class="form-control" id="trainTime" type="text" required>
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
-                                <input class="form-control" id="frequencyInput" placeholder="30" type="text">
+                                <input class="form-control" id="frequencyInput" type="text" required>
                             </div>
-                            <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
+                            <button class="btn btn-dark float-right" id="add-train-btn">Submit</button>
                         </form>
                     </div>
                 </div>
