--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <!-- MOMENT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 </head>
@@ -23,7 +20,7 @@
 
         <div class="jumbotron text-center">
             <h1 class="display-4">Anytime is Train Time</h1>
-            <p class="lead">Chucka-chucka, choo-choo.</p>
+            <p class="lead">Chugga-chugga, choo-choo.</p>
         </div>
 
         <div class="row">
